# baby_grow_helper

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COLLABORATION.md  DIFFERENTIATION.md  FEEDBACK_LOOP.md  Makefile  README.md  ROADMAP.md  VISION.md  pyproject.toml
decisions/: 0001-review-findings.md  0002-signals-schema.md  0003-local-fallback-chain-and-remote-migration.md  0004-database-evolution-local-sqlite-to-cloud-postgres.md
deploy/: Dockerfile.api  Dockerfile.web  docker-compose.family-trial.yml
deploy/launchd/: com.babygrow.feedback-reminder.plist  com.babygrow.postgres-backup.plist
docs/: CLOUDFLARE_FIXED_DOMAIN.md  FAMILY_TRIAL_DEPLOY.md  GIT_HANDOFF_WORKFLOW.md  NEW_MACHINE_SETUP.md  NGROK_FREE_DOMAIN.md
migrations/: README.md
migrations/postgres/: 0001_family_mobile_mvp.sql  0002_trial_feedback.sql
migrations/sqlite/: 0001_phase25_family_foundation.sql  0002_trial_feedback.sql
prd/: phase0-skeleton.md  phase1-signals.md  phase2-weekly-insight.md  phase2_5-family-mobile-mvp.md
prd/inbox/: phase2-cloud-smoke-test.md  phase2-weekly-insight.md
reports/: autonomous-2026-05-26.md  phase0-baseline.md  phase1-baseline.md  phase2-baseline.md  phase2_5-family-mobile-baseline.md
scripts/: backup_postgres.sh  backup_remote_hook.example.sh  bootstrap_new_machine.ps1  bootstrap_new_machine.sh  check_feedback_digest.sh  restore_postgres_backup.sh
src/agents/: context_compressor.py  insight_writer.py  recorder.py  signal_extractor.py
src/api/: main.py
src/core/: db.py  embeddings.py  family.py  llm_client.py  migrations.py  models.py  runtime_store.py  seed.py  signal_delta.py
src/prompts/: insight_writer.md  recorder.md  signal_extractor.md
src/scripts/: backfill.py  cloud_smoke.py  family_admin.py  feedback_digest.py
tests/: conftest.py  test_api.py  test_backfill_cli.py  test_backfill_e2e.py  test_context_compressor_unit.py  test_db.py  test_embeddings_integration.py  test_embeddings_unit.py  test_family_admin.py  test_family_auth.py  test_feedback_digest.py  test_insight_api.py  test_insight_writer_unit.py  test_llm_client.py  test_migrations.py  test_models.py  test_phase2_e2e.py  test_recorder_integration.py  test_recorder_unit.py  test_runtime_store.py  test_seed.py  test_signal_delta_unit.py  test_signal_extractor_unit.py
tests/fixtures/: backfill_xiaoming.README.md  backfill_xiaoming.jsonl  recorder_samples.py
web/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/[...path]/: route.ts
web/app/children/: page.tsx
web/app/feedback/: page.tsx
web/app/heatmap/: page.tsx
web/app/log/: page.tsx
web/app/login/: page.tsx
web/app/timeline/: page.tsx
web/app/weekly/: page.tsx
web/lib/: api.ts  family-session.ts
web/public/: manifest.webmanifest
