[project]
name = "baby-grow-helper"
version = "0.0.1"
description = "Long-term AI parenting companion. Phase 0 skeleton."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Yaoyao's Dad" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "black>=24.10",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Phase 1 §2.1#3 — BGE-small-zh-v1.5 via sentence-transformers. Kept
# optional because the unit suite uses a stub; install for the
# integration baseline run or to serve the live API end-to-end.
ml = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---- black ------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---- ruff -------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by black
    # Chinese-content false positives — this project intentionally uses
    # full-width punctuation in user-visible strings, fixtures, prompts, and
    # docstrings. The `× / x` warnings show up in math notation we want kept.
    "RUF001", # ambiguous unicode in strings
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

# ---- mypy -------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["sqlite_vec.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

# ---- pytest -----------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
markers = [
    "integration: requires real Ollama or BGE weights (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

# ---- coverage ---------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/core/seed.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
